fixed overflow err and padding

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -19,5 +19,4 @@ body {
   /*
   font-family: Arial, Helvetica, Helvetica Neue, serif;
 */
-  overflow-y: hidden;
 }
