--- a/app/components/Board.scss
+++ b/app/components/Board.scss
@@ -23,6 +23,11 @@
   color: #888888;
 }
 
+.skateBoard:focus {
+  border: none;
+  box-shadow: none;
+}
+
 .board-padding {
   padding-bottom: 0rem;
 }
